force-app/main/default/objects/Scheduled_Integration_Job__c/Scheduled_Integration_Job__c.object-meta.xml
<CustomObject>
    <label>Scheduled Integration Job</label>
    <nameField>
        <displayFormat>SIJ-{00000}</displayFormat>
        <label>Scheduled Integration Job #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Integration Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>