force-app/main/default/objects/Scheduled_Integration_Job__c/fields/Created_By_User__c.field-meta.xml
<CustomField>
    <fullName>Created_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Scheduled Integration Jobs</relationshipLabel>
    <relationshipName>Scheduled_Integration_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>