force-app/main/default/objects/Scheduled_Integration_Job__c/fields/Created_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Created_DateTime__c</fullName>
    <label>Created DateTime</label>
    <type>DateTime</type>
</CustomField>