force-app/main/default/objects/Scheduled_Integration_Job__c/fields/Cron_Job_Ids__c.field-meta.xml
<CustomField>
    <fullName>Cron_Job_Ids__c</fullName>
    <label>Cron Job Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>