force-app/main/default/objects/Scheduled_Integration_Job__c/fields/Deleted_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Deleted_DateTime__c</fullName>
    <label>Deleted DateTime</label>
    <type>DateTime</type>
</CustomField>