force-app/main/default/objects/Scheduled_Integration_Job__c/fields/Frequency_Type__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Type__c</fullName>
    <label>Frequency Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>