force-app/main/default/objects/Scheduled_Integration_Job__c/fields/Frequency_Value__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Value__c</fullName>
    <label>Frequency Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>