force-app/main/default/objects/Scheduled_Integration_Job__c/fields/Last_Claimed_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Claimed_At__c</fullName>
    <label>Last Claimed At</label>
    <type>DateTime</type>
</CustomField>