force-app/main/default/objects/Scheduled_Integration_Job__c/fields/Lease_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Lease_Expires_At__c</fullName>
    <label>Lease Expires At</label>
    <type>DateTime</type>
</CustomField>