force-app/main/default/objects/Scheduled_Integration_Job__c/fields/Lease_Token__c.field-meta.xml
<CustomField>
    <fullName>Lease_Token__c</fullName>
    <label>Lease Token</label>
    <length>80</length>
    <type>Text</type>
</CustomField>