force-app/main/default/objects/Scheduled_Integration_Job__c/fields/Logical_Job_Key__c.field-meta.xml
<CustomField>
    <fullName>Logical_Job_Key__c</fullName>
    <externalId>true</externalId>
    <label>Logical Job Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>