force-app/main/default/objects/Scheduled_Integration_Job__c/fields/Next_Run_At__c.field-meta.xml
<CustomField>
    <fullName>Next_Run_At__c</fullName>
    <label>Next Run At</label>
    <type>DateTime</type>
</CustomField>