force-app/main/default/objects/Scheduled_Integration_Job__c/fields/Processor_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Processor_Job_Id__c</fullName>
    <label>Processor Job Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>