force-app/main/default/objects/Scheduled_Integration_Job__c/fields/Scheduler_Name__c.field-meta.xml
<CustomField>
    <fullName>Scheduler_Name__c</fullName>
    <label>Scheduler Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>