force-app/main/default/objects/Scheduled_Integration_Job__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <label>Source Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>